--- a/content/speech-and-language-processing/3.5-generalizing-vs-overfitting.md
+++ b/content/speech-and-language-processing/3.5-generalizing-vs-overfitting.md
@@ -1,5 +1,5 @@
 ---
-tittle: "3.5 对训练集的泛化与过拟合"
+title: "3.5 对训练集的泛化与过拟合"
 ---
 
 n-gram 模型和许多统计模型一样，依赖于训练语料库。这种依赖性带来了两个重要后果：其一是概率值往往反映了训练语料中的一些具体事实；其二是随着 N 值的增加，n-gram 模型对训练语料的建模能力会变得越来越强。
