--- a/content/speech-and-language-processing/ch2/ch2-05.md
+++ b/content/speech-and-language-processing/ch2/ch2-05.md
@@ -193,8 +193,7 @@ return V
 
 <figcaption>
 
-<span>图 2.13</span> BPE 算法的标记学习部分，用于将按单个字符或字节分割的语料库转换为词汇表，通过迭代合并标记来学习。
-改编自 Bostrom 和 Durrett（2020）。
+**图 2.13** BPE 算法的标记学习部分，用于将按单个字符或字节分割的语料库转换为词汇表，通过迭代合并标记来学习。改编自 Bostrom 和 Durrett（2020）。
 
 </figcaption>
 </figure>
