--- a/content/speech-and-language-processing/ch4/ch4-01.md
+++ b/content/speech-and-language-processing/ch4/ch4-01.md
@@ -7,9 +7,16 @@ date: "2025-09-20T08:29:00+08:00"
 
 该分类器的核心思想如图 4.1 所示。我们将一篇文本文档表示为**词袋（bag of words）**，即一个无序的词汇集合，忽略词语在文档中的位置，只保留它们在文档中出现的频率。在图中的示例中，我们并不记录“我爱这部电影”或“我会推荐它”等短语中词语的顺序，而是简单地记录：单词 *I* 在整个摘录中出现了 5 次，*it* 出现了 6 次，*love*、*recommend* 和 *movie* 各出现 1 次，等等。
 
+<figure>
+
 ![](/images/speech-and-language-processing/slp-fig-4-1.png)
 
+<figcaption>
+
 **图 4.1** 多项式朴素贝叶斯分类器应用于电影评论的直观示意图。忽略了词语的位置（即词袋假设），仅利用每个词的出现频率。
+
+</figcaption>
+</figure>
 
 朴素贝叶斯是一种**概率型分类器**，这意味着对于一篇文档 $d$，它会在所有类别 $c \in C$ 中返回一个后验概率最大的类别 $\hat{c}$。在公式 (4.1) 中，我们使用上帽符号 $\hat{}$ 表示“我们对正确类别的估计”，并使用 **argmax** 表示选择使某个函数（此处为概率 $P(c|d)$）达到最大值的那个参数（此处为类别 $c$）。
 
