fix missing title

--- a/content/speech-and-language-processing/ch5-01.md
+++ b/content/speech-and-language-processing/ch5-01.md
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "5.1 Sigmoid函数"
 summary: ""
 date: 2025-10-03T08:56:00+08:00
 ---
@@ -85,7 +85,7 @@ $$
 
 
 <nav class="pagination justify-content-between">
-<a href="../ch5"></a>
+<a href="../ch5">第5章 逻辑回归</a>
 <a href="../">目录</a>
 <span></span>
 </nav>
