--- a/content/speech-and-language-processing/ch4-03.md
+++ b/content/speech-and-language-processing/ch4-03.md
@@ -63,6 +63,6 @@ $$
 <nav class="pagination justify-content-between">
 <a href="../ch4-01">4.1 朴素贝叶斯分类器</a>
 <a href="../">目录</a>
-<a href="../ch5"></a>
+<a href="../ch5">第5章 逻辑回归</a>
 </nav>
 
