--- a/content/speech-and-language-processing/ch4-01.md
+++ b/content/speech-and-language-processing/ch4-01.md
@@ -97,6 +97,6 @@ $$
 <nav class="pagination justify-content-between">
 <a href="../ch4">第4章 朴素贝叶斯、文本分类与情感分析</a>
 <a href="../">目录</a>
-<a href="../ch4-03">4.3 实例演示</a>
+<a href="../ch4-02">4.2 训练朴素贝叶斯分类器</a>
 </nav>
 
