--- a/content/speech-and-language-processing/ch5-01.md
+++ b/content/speech-and-language-processing/ch5-01.md
@@ -17,7 +17,7 @@ z = \left( \sum_{i=1}^n w_i x_i \right) + b
 $$
 
 (5.2)
-{class="text-center"}
+{class="text-end"}
 
 在本书其余部分，我们将使用线性代数中的**点积（dot product）**符号来表示此类求和。两个向量 $a$ 和 $b$ 的点积记作 $a \cdot b$，是它们对应元素乘积之和。（注意：我们用粗体 $\mathbf{b}$ 表示向量。）因此，以下表达式与公式 (5.2) 等价：
 
@@ -26,7 +26,7 @@ z = \mathbf{w} \cdot \mathbf{x} + b
 $$
 
 (5.3)
-{class="text-center"}
+{class="text-end"}
 
 但请注意，公式 (5.3) 中没有任何机制强制 $z$ 成为一个合法的概率值，即落在0到1之间。事实上，由于权重是实数，输出甚至可能为负；$z$ 的取值范围是从 $-\infty$ 到 $\infty$。
 
@@ -41,7 +41,7 @@ $$
 $$
 
 (5.4)
-{class="text-center"}
+{class="text-end"}
 
 （在本书后续内容中，我们将使用 $\exp(x)$ 表示 $e^x$。）Sigmoid函数具有多个优点：它将一个实数值映射到 (0,1) 区间内，这正是我们对概率值的要求。因为它在0附近近似线性，而在两端趋于平坦，所以能将异常值压缩到接近0或1。此外，它是可微的，这一点将在第5.10节中对模型学习过程起到重要作用。
 
@@ -59,7 +59,7 @@ P(y = 0) &= 1 - \sigma(\mathbf{w} \cdot \mathbf{x} + b) \\
 $$
 
 (5.5)
-{class="text-center"}
+{class="text-end"}
 
 Sigmoid函数具有以下性质：
 
@@ -68,7 +68,7 @@ $$
 $$
 
 (5.6)
-{class="text-center"}
+{class="text-end"}
 
 因此，我们也可以将 $P(y = 0)$ 表达为 $\sigma(-(\mathbf{w} \cdot \mathbf{x} + b))$。
 
@@ -79,7 +79,7 @@ $$
 $$
 
 (5.7)
-{class="text-center"}
+{class="text-end"}
 
 将 $z$ 称为 **logit**，是在提醒我们：通过使用Sigmoid函数将 $z$（取值范围为 $-\infty$ 到 $\infty$）转换为概率，我们实际上隐含地将 $z$ 解释为不仅仅是任意实数，而是特定的**对数几率（log odds）**。
 
