--- a/content/speech-and-language-processing/ch5-01.md
+++ b/content/speech-and-language-processing/ch5-01.md
@@ -87,6 +87,6 @@ $$
 <nav class="pagination justify-content-between">
 <a href="../ch5">第5章 逻辑回归</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../ch5-02">5.2 使用逻辑回归进行分类</a>
 </nav>
 
