--- a/content/speech-and-language-processing/ch5-02.md
+++ b/content/speech-and-language-processing/ch5-02.md
@@ -190,6 +190,6 @@ $$
 <nav class="pagination justify-content-between">
 <a href="../ch5-01">5.1 Sigmoid函数</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../ch5-03">5.3 多项逻辑回归</a>
 </nav>
 
