--- a/content/speech-and-language-processing/ch5-03.md
+++ b/content/speech-and-language-processing/ch5-03.md
@@ -100,6 +100,6 @@ $$
 <nav class="pagination justify-content-between">
 <a href="../ch5-02">5.2 使用逻辑回归进行分类</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../ch5-04">5.4 逻辑回归中的学习</a>
 </nav>
 
