add slp 5-6; clean figcaption

--- a/content/speech-and-language-processing/ch5-01.md
+++ b/content/speech-and-language-processing/ch5-01.md
@@ -32,7 +32,7 @@ $$
 
 ![](/images/speech-and-language-processing/slp-fig-5-1.png)
 
-::fig:: **图 5.1** Sigmoid函数 $\sigma(z) = \frac{1}{1+e^{-z}}$ 将一个实数值映射到区间 (0,1) 内。它在0附近接近线性，但极端值会被压缩至0或1。
+**图 5.1** Sigmoid函数 $\sigma(z) = \frac{1}{1+e^{-z}}$ 将一个实数值映射到区间 (0,1) 内。它在0附近接近线性，但极端值会被压缩至0或1。
 
 为了生成一个概率值，我们将 $z$ 输入**Sigmoid函数** $\sigma(z)$。Sigmoid函数（因其形状像字母“s”而得名）也被称为**Logistic函数**，逻辑回归也因此得名。Sigmoid函数的数学表达式如下，其图形如图5.1所示：
 
