--- a/content/speech-and-language-processing/ch5-02.md
+++ b/content/speech-and-language-processing/ch5-02.md
@@ -33,7 +33,7 @@ $$
 
 ![](/images/speech-and-language-processing/slp-fig-5-2.png)
 
-::fig:: **图 5.2** 一个小型测试文档示例，展示了提取出的特征向量 $x$。
+**图 5.2** 一个小型测试文档示例，展示了提取出的特征向量 $x$。
 
 我们暂时假设已经为这些特征学习到了对应的实数值权重，且这 6 个特征的权重为 `[2.5, −5.0, −1.2, 0.5, 2.0, 0.7]`，偏置项 $b = 0.1$。（下一节将介绍权重是如何学习的。）例如，权重 $w_1$ 表示正面情感词（如 *great*、*nice*、*enjoyable* 等）的数量对判断为正面情感的重要性，而 $w_2$ 则表示负面情感词的重要性。注意 $w_1 = 2.5$ 为正值，而 $w_2 = −5.0$ 为负值，这意味着负面词与正面情感的判定呈负相关，并且其重要性大约是正面词的两倍。
 
