--- a/content/speech-and-language-processing/ch5-05.md
+++ b/content/speech-and-language-processing/ch5-05.md
@@ -91,6 +91,6 @@ $$
 <nav class="pagination justify-content-between">
 <a href="../ch5-04">5.4 逻辑回归中的学习</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../ch5-06">5.6 梯度下降</a>
 </nav>
 
