--- a/content/speech-and-language-processing/ch3-06.md
+++ b/content/speech-and-language-processing/ch3-06.md
@@ -23,13 +23,15 @@ $$
 拉普拉斯平滑只需在每个频次上加 1（因此它也被称为**加一平滑**）。由于词汇表中共有 $V$ 个词，每个词的频次都增加了 1，因此我们也需要调整分母，以计入额外增加的 $V$ 次观测。（如果我们不增加分母，概率值会怎样？）
 
 $$
-P_{\text{Laplace}}(w_i) = \frac{c_i + 1}{N + V} \tag{3.24}
+P_{\text{Laplace}}(w_i) = \frac{c_i + 1}{N + V}
+\tag{3.24}
 $$
 
 除了同时修改分子和分母外，另一种更方便的方式是通过定义**调整后的频次（adjusted count）** $c^∗_i$ 来描述平滑算法对分子的影响。这种调整后的频次更容易与最大似然估计（MLE）的原始频次直接比较，并且像 MLE 频次一样，可以通过除以 $N$ 转换为概率。为了定义这个频次，由于我们在分子上加了 1，还需要乘以一个归一化因子 $\frac{N}{N+V}$：
 
 $$
-c^∗_i = (c_i +1)\frac{N}{N + V} \tag{3.25}
+c^∗_i = (c_i +1)\frac{N}{N + V}
+\tag{3.25}
 $$
 
 现在，我们可以将 $c^∗_i$ 除以 $N$ 得到对应的概率 $P^∗_i$。
@@ -71,14 +73,16 @@ $$
 对于加一平滑后的bigram频次，我们需要在unigram频次上加上词汇表中单词类型的总数$V$：
 
 $$
-P_{Laplace}(w_n|w_{n−1}) = \frac{C(w_{n−1}w_n)+ 1}{\sum_w (C(w_{n−1}w)+ 1)} = \frac{C(w_{n−1}w_n)+ 1}{C(w_{n−1}) + V} \tag{3.27}
+P_{Laplace}(w_n|w_{n−1}) = \frac{C(w_{n−1}w_n)+ 1}{\sum_w (C(w_{n−1}w)+ 1)} = \frac{C(w_{n−1}w_n)+ 1}{C(w_{n−1}) + V}
+\tag{3.27}
 $$
 
 因此，前一节给出的每个unigram频次都需要加上$V = 1446$。结果就是图3.7中的平滑后的bigram概率。
 为了便于观察平滑算法对原始频次的影响程度，通常需要重构计数矩阵。这些调整后的频次可以通过公式3.28计算得到。图3.8展示了重构后的频次：
 
 $$
-c^∗(w_{n−1}w_n) = \frac{[C(w_{n−1}w_n) + 1] \times C(w_{n−1})}{C(w_{n−1}) + V} \tag{3.28}
+c^∗(w_{n−1}w_n) = \frac{[C(w_{n−1}w_n) + 1] \times C(w_{n−1})}{C(w_{n−1}) + V}
+\tag{3.28}
 $$
 
 这段翻译解释了如何通过拉普拉斯平滑（即加一平滑）方法来处理bigram模型中的零频次问题，并给出了具体的计算公式和步骤。同时，也提到了为了更好地理解和展示平滑效果，可以通过重构计数矩阵的方式来直观地查看变化。
@@ -131,10 +135,11 @@ $$
 加一平滑的一个替代方法是从已见事件向未见事件转移稍微少一些的概率质量。我们不是给每个频次加1，而是加上一个小于1的分数k（比如0.5？0.01？）。这种算法因此被称为**加-k平滑**。
 
 $$
-P^*_{Add-k}(w_n|w_{n−1}) = \frac{C(w_{n−1}w_n) + k}{C(w_{n−1}) + kV} \tag{3.29}
+P^*_{Add-k}(w_n|w_{n−1}) = \frac{C(w_{n−1}w_n) + k}{C(w_{n−1}) + kV}
+\tag{3.29}
 $$
 
-使用加-k平滑时，我们需要有一种方法来选择k值；这可以通过在**开发集（devset）**上进行优化来实现。虽然加-k平滑对于某些任务（包括文本分类）是有用的，但是结果表明它对于语言模型的效果仍然不佳，生成的频次方差较大，且对折扣的选择常常不恰当（Gale和Church，1994）。 
+使用加-k平滑时，我们需要有一种方法来选择k值；这可以通过在**开发集（devset）**上进行优化来实现。虽然加-k平滑对于某些任务（包括文本分类）是有用的，但是结果表明它对于语言模型的效果仍然不佳，生成的频次方差较大，且对折扣的选择常常不恰当（Gale和Church，1994）。
 
 通过这种方式，加-k平滑提供了一种调整从高频词到低频或未出现词之间概率分配的方法，使得模型在处理未登录词时更加灵活。然而，选择合适的k值是一个挑战，并且该方法并不总是能在语言建模中产生理想的性能。因此，在实践中可能需要尝试不同的k值，或者考虑其他更复杂的平滑技术。
 
