--- a/content/speech-and-language-processing/ch5-06.md
+++ b/content/speech-and-language-processing/ch5-06.md
@@ -264,6 +264,6 @@ $$
 <nav class="pagination justify-content-between">
 <a href="../ch5-05">5.5 交叉熵损失函数</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../ch5-07">5.7 正则化</a>
 </nav>
 
