--- a/content/speech-and-language-processing/ch5-11.md
+++ b/content/speech-and-language-processing/ch5-11.md
@@ -28,6 +28,6 @@ date: 2025-10-10T09:08:00.000Z
 <nav class="pagination justify-content-between">
 <a href="../ch5-10">5.10 进阶：梯度公式的推导</a>
 <a href="../">目录</a>
-<a href="../ch6">CHAPTER 6 Vector Semantics and Embeddings</a>
+<a href="../ch6">第6章 向量语义与词嵌入</a>
 </nav>
 
