--- a/content/speech-and-language-processing/ch6-01.md
+++ b/content/speech-and-language-processing/ch6-01.md
@@ -1,197 +1,90 @@
 ---
-title: "6.1 Lexical Semantics"
+title: "6.1 词汇语义"
 summary: ""
 date: 
 ---
 
-Let’s begin by introducing some basic principles of word meaning. How should
-we represent the meaning of a word? In the n-gram models of Chapter 3, and in
-classical NLP applications, our only representation of a word is as a string of letters,
-or an index in a vocabulary list. This representation is not that different from a
-tradition in philosophy, perhaps you’ve seen it in introductory logic classes, in which
-the meaning of words is represented by just spelling the word with small capital
-letters; representing the meaning of “dog” as DOG , and “cat” as CAT, or by using an
-apostrophe (DOG ’).
+我们从介绍一些词义的基本原则开始。如何表示一个词的含义？在第3章的n元语法模型以及传统NLP应用中，对一个词的唯一表示方式就是一串字母，或词汇表中的一个索引。这种表示方法与哲学中的某种传统并无太大区别——你可能在逻辑学入门课上见过：词的意义仅通过用小写大写字母拼出该词来表示；例如将“dog”（狗）的意义表示为 DOG，将“cat”（猫）表示为 CAT，或者使用撇号（DOG’）。
 
-Representing the meaning of a word by capitalizing it is a pretty unsatisfactory
-model. You might have seen a version of a joke due originally to semanticist Barbara
-Partee (Carlson, 1977):
+仅通过大写单词来表示其意义是一种令人相当不满意的模型。你或许听说过语义学家芭芭拉·帕蒂（Barbara Partee）原创的一个笑话版本（Carlson, 1977）：
 
-> Q: What’s the meaning of life?
-> A: LIFE ’
+> 问：生命的意义是什么？  
+> 答：LIFE’
 
-Surely we can do better than this! After all, we’ll want a model of word meaning
-to do all sorts of things for us. It should tell us that some words have similar mean-
-ings (*cat* is similar to *dog*), others are antonyms (*cold* is the opposite of *hot*), some
-have positive connotations (*happy*) while others have negative connotations (*sad*). It
-should represent the fact that the meanings of *buy*, *sell*, and *pay* offer differing per-
-spectives on the same underlying purchasing event. (If I buy something from you,
-you’ve probably sold it to me, and I likely paid you.) More generally, a model of
-word meaning should allow us to draw inferences to address meaning-related tasks
-like question-answering or dialogue.
+我们肯定能做得更好！毕竟，我们希望词义模型能够完成各种任务。它应该告诉我们某些词具有相似的含义（*cat* 和 *dog* 相似），有些是反义词（*cold* 与 *hot* 相反），有些具有正面情感色彩（*happy*），而另一些则具有负面情感色彩（*sad*）。它还应能表达出 *buy*（买）、*sell*（卖）和 *pay*（支付）这些词虽然描述了同一个购买事件的不同视角，但彼此相关这一事实。（如果我从你这里买东西，那你很可能就是把它卖给了我，而且我大概率已经付钱给你了。）更广泛地说，词义模型应能支持我们进行推理，以完成诸如问答或对话等与意义相关的任务。
 
-In this section we summarize some of these desiderata, drawing on results in the
-linguistic study of word meaning, which is called **lexical semantics**; we’ll return to
-and expand on this list in Appendix G and Chapter 21.
+在本节中，我们将总结这些需求，并借鉴语言学中关于词义研究（即**词汇语义**，lexical semantics）的成果；我们将在附录G和第21章中再次讨论并扩展这份清单。
 
-**Lemmas and Senses** Let’s start by looking at how one word (we’ll choosemouse)
-might be deﬁned in a dictionary (simpliﬁed from the online dictionary WordNet):
+**词元与词义** 首先，让我们看看词典中可能如何定义（简化自在线词典WordNet）一个词（我们选择 mouse）：
 
 ```text
-mouse (N)
-1. any of numerous small rodents...
-2. a hand-operated device that controls a cursor...
+mouse (名词)
+1. 多种小型啮齿动物之一……
+2. 一种手动操作、控制光标的设备……
 ```
 
-Here the form mouse is the **lemma**, also called the **citation form**. The form
-*mouse* would also be the lemma for the word *mice*; dictionaries don’t have separate
-deﬁnitions for inﬂected forms like *mice*. Similarly *sing* is the lemma for *sing*, *sang*,
-*sung*. In many languages the inﬁnitive form is used as the lemma for the verb, so
-Spanish *dormir* “to sleep” is the lemma *forduermes* “you sleep”. The speciﬁc forms
-*sung* or *carpets* or *sing* or *duermes* are called **wordforms**.
+这里的 “mouse” 形式称为**词元**（lemma），也称作**引用形式**（citation form）。*mouse* 也是 *mice* 的词元；词典不会为 *mice* 这样的屈折变形单独设立词条。同样地，*sing* 是 *sing*、*sang*、*sung* 的词元。在许多语言中，动词的不定式形式被用作词元，因此西班牙语 *dormir*（睡觉）是 *duermes*（你睡觉）的词元。像 *sung*、*carpets*、*sing* 或 *duermes* 这样的具体形式被称为**词形**（wordforms）。
 
-As the example above shows, each lemma can have multiple meanings; the
-lemma *mouse* can refer to the rodent or the cursor control device. We call each
-of these aspects of the meaning of *mouse* a **word sense**. The fact that lemmas can
-be **polysemous** (have multiple senses) can make interpretation difﬁcult (is someone
-who types “mouse info” into a search engine looking for a pet or a tool?). Chap-
-ter 11 and Appendix G will discuss the problem of polysemy, and introduce
-**word sense disambiguation**, the task of determining which sense of a word is being used
-in a particular context.
+如上例所示，每个词元可以有多个含义；*mouse* 可以指啮齿动物，也可以指光标控制设备。我们将 *mouse* 的每一种含义称为一个**词义**（word sense）。词元具有**多义性**（polysemous，即具有多个词义），这会使理解变得困难（有人在搜索引擎中输入“mouse info”，他是在找宠物信息还是工具信息？）。第11章和附录G将讨论多义性问题，并介绍**词义消歧**（word sense disambiguation），即确定某个词在特定上下文中使用的是哪个词义的任务。
 
-**Synonymy** One important component of word meaning is the relationship be-
-tween word senses. For example when one word has a sense whose meaning is
-identical to a sense of another word, or nearly identical, we say the two senses of
-those two words are **synonyms**. Synonyms include such pairs as
+**同义关系** 词义的一个重要组成部分是词义之间的关系。例如，当一个词的某个词义与另一个词的某个词义完全相同或几乎相同时，我们称这两个词的这两个词义是**同义词**（synonyms）。同义词包括以下这些词对：
 
-```text
-couch/sofa vomit/throw up ﬁlbert/hazelnut car/automobile
-```
+- *couch/sofa*（沙发）
+- *vomit/throw up*（呕吐）
+- *filbert/hazelnut*（榛子）
+- *car/automobile*（汽车）
 
-A more formal deﬁnition of synonymy (between words rather than senses) is that
-two words are synonymous if they are substitutable for one another in any sentence
-without changing the *truth conditions* of the sentence, the situations in which the
-sentence would be true.
+对同义关系（在词之间而非词义之间）的一个更正式的定义是：如果两个词可以在任何句子中互换而不改变句子的**真值条件**（truth conditions）——即不改变句子为真的情境——那么这两个词就是同义的。
 
-While substitutions between some pairs of words like *car / automobile* or 
-*water* / $H_2O$ are truth preserving, the words are still not identical in meaning. Indeed,
-probably no two words are absolutely identical in meaning. One of the fundamental
-tenets of semantics, called the **principle of contrast**(Girard 1718, Br´eal 1897, Clark
-1987), states that a difference in linguistic form is always associated with some dif-
-ference in meaning. For example, the word $H_2O$ is used in scientiﬁc contexts and
-would be inappropriate in a hiking guide -- *water* would be more appropriate -- and
-this genre difference is part of the meaning of the word. In practice, the word syn-
-onym is therefore used to describe a relationship of approximate or rough synonymy.
+尽管像 *car / automobile* 或 *water / H₂O* 这样的词对替换后真值保持不变，但它们在意义上仍然并非完全相同。事实上，可能没有任何两个词在意义上是绝对相同的。语义学的一个基本信条，称为**对比原则**（principle of contrast）（Girard, 1718; Bréal, 1897; Clark, 1987），指出语言形式上的差异总是伴随着某种意义上的差异。例如，H₂O 通常用于科学语境，在徒步指南中使用就不太合适——此时用 *water* 更恰当——而这种文体上的差异正是词义的一部分。因此在实践中，“同义词”一词通常用来描述一种近似或大致的同义关系。
 
-**Word Similarity** While words don’t have many synonyms, most words do have
-lots of *similar* words. Cat is not a synonym of *dog*, but *cats* and dogs are certainly
-similar words. In moving from synonymy to similarity, it will be useful to shift from
-talking about relations between word senses (like synonymy) to relations between
-words (like similarity). Dealing with words avoids having to commit to a particular
-representation of word senses, which will turn out to simplify our task.
+**词语相似性** 尽管词语的真正同义词并不多，但大多数词语都有许多**相似**的词。*cat*（猫）并不是 *dog*（狗）的同义词，但“猫”和“狗”无疑是相似的词语。当我们从“同义关系”转向“相似性”时，将讨论的重点从词义之间的关系（如同义）转移到词语之间的关系（如相似性）会更有用。关注词语本身可以我们免于必须预先确定某种特定的词义表示方式，这将有助于简化任务。
 
-The notion of word **similarity** is very useful in larger semantic tasks. Knowing
-how similar two words are can help in computing how similar the meaning of two
-phrases or sentences are, a very important component of tasks like question answer-
-ing, paraphrasing, and summarization. One way of getting values for word similarity
-is to ask humans to judge how similar one word is to another. A number of datasets
-have resulted from such experiments. For example the SimLex-999 dataset (Hill
-et al., 2015) gives values on a scale from 0 to 10, like the examples below, which
-range from near-synonyms (*vanish*, *disappear*) to pairs that scarcely seem to have
-anything in common (*hole*, *agreement*):
+词语**相似性**的概念在更广泛的语义任务中非常有用。了解两个词语的相似程度，有助于计算两个短语或句子在意义上的相似度，而这在问答、改写和摘要等任务中是一个至关重要的组成部分。获取词语相似度数值的一种方法是请人类判断一个词与另一个词的相似程度。这类实验已产生了一些数据集。例如，SimLex-999 数据集（Hill 等，2015）给出了从 0 到 10 的评分，如下例所示，这些评分范围从近乎同义词（*vanish* 消失，*disappear* 消失）到几乎毫无共同点的词对（*hole* 洞，*agreement* 协议）：
 
-| --- | --- | --- |
+| 词1 | 词2 | 相似度 |
+| :--- | :--- | :--- |
 | vanish | disappear | 9.8 |
 | belief | impression | 5.95 |
 | muscle | bone | 3.65 |
-| modest | ﬂexible | 0.98 |
+| modest | flexible | 0.98 |
 | hole | agreement | 0.3 |
 
-**Word Relatedness** The meaning of two words can be related in ways other than
-similarity. One such class of connections is called word **relatedness** (Budanitsky
-and Hirst, 2006), also traditionally called word **association** in psychology.
+**词语关联性** 两个词的意义除了相似性之外，还可以通过其他方式相关联。其中一类联系被称为词语**关联性**（word relatedness）（Budanitsky 和 Hirst, 2006），在心理学中传统上也称为词语**联想**（association）。
 
-Consider the meanings of the words coffee and cup. Coffee is not similar to cup;
-they share practically no features (coffee is a plant or a beverage, while a cup is a
-manufactured object with a particular shape). But coffee and cup are clearly related;
-they are associated by co-participating in an everyday event (the event of drinking
-coffee out of a cup). Similarly *scalpel* and *surgeon* are not similar but are related
-eventively (a surgeon tends to make use of a scalpel).
+考虑 *coffee*（咖啡）和 *cup*（杯子）这两个词的含义。*coffee* 和 *cup* 并不相似；它们几乎没有任何共同的特征（咖啡是一种植物或饮品，而杯子是一种具有特定形状的人造物体）。但 *coffee* 和 *cup* 显然是相关的；它们通过共同参与一个日常事件（用杯子喝咖啡）而关联在一起。同样，*scalpel*（手术刀）和 *surgeon*（外科医生）并不相似，但在事件上是相关的（外科医生通常会使用手术刀）。
 
-One common kind of relatedness between words is if they belong to the same
-**semantic ﬁeld**. A semantic ﬁeld is a set of words which cover a particular semantic
-domain and bear structured relations with each other. For example, words might be
-related by being in the semantic ﬁeld of hospitals ( *surgeon*, *scalpel*, *nurse*,
-*anesthetic*, *hospital*), restaurants (*waiter*, *menu*, *plate*, *food*, *chef*), or houses (*door*, *roof*,
-*kitchen*, *family*, *bed*). Semantic ﬁelds are also related to **topic models**, like
-**Latent Dirichlet Allocation, LDA**, which apply unsupervised learning on large sets of texts
-to induce sets of associated words from text. Semantic ﬁelds and topic models are
-very useful tools for discovering topical structure in documents.
+词语之间一种常见的关联类型是它们属于同一个**语义场**（semantic field）。语义场是一组覆盖特定语义领域且彼此之间具有结构化关系的词语。例如，词语可能因为属于医院（*surgeon* 外科医生、*scalpel* 手术刀、*nurse* 护士、*anesthetic* 麻醉剂、*hospital* 医院）、餐馆（*waiter* 服务员、*menu* 菜单、*plate* 盘子、*food* 食物、*chef* 厨师）或房屋（*door* 门、*roof* 屋顶、*kitchen* 厨房、*family* 家庭、*bed* 床）的语义场而相关联。语义场也与**主题模型**（topic models）密切相关，例如**潜在狄利克雷分配**（Latent Dirichlet Allocation, LDA），后者通过对大量文本进行无监督学习，从文本中推断出一组相关的词语。语义场和主题模型是发现文档中主题结构的非常有用的工具。
 
-In Appendix G we’ll introduce more relations between senses like **hypernymy**
-or **IS-A**, **antonymy** (opposites) and **meronymy** (part-whole relations).
+在附录 G 中，我们将介绍更多词义之间的关系，如**上位关系**（hypernymy）或 **IS-A**（“是一种”）、**反义关系**（antonymy，反义词）和**部分-整体关系**（meronymy）。
 
-**Semantic Frames and Roles** Closely related to semantic ﬁelds is the idea of a
-**semantic frame**. A semantic frame is a set of words that denote perspectives orsemantic frame
-participants in a particular type of event. A commercial transaction, for example,
-is a kind of event in which one entity trades money to another entity in return for
-some good or service, after which the good changes hands or perhaps the service is
-performed. This event can be encoded lexically by using verbs like *buy* (the event
-from the perspective of the buyer), *sell* (from the perspective of the seller), *pay*
-(focusing on the monetary aspect), or nouns like *buyer*. Frames have semantic roles
-(like *buyer*, *seller*, *goods*, *money*), and words in a sentence can take on these roles.
+**语义框架与角色** 与语义场密切相关的是**语义框架**（semantic frame）的概念。语义框架是一组词语，它们表示特定事件类型中的不同视角或参与者。例如，商业交易是一种事件，其中一个实体向另一个实体支付金钱，以换取某种商品或服务，之后商品易手或服务被执行。这一事件可以通过动词来在词汇上编码，如 *buy*（从买方的视角）、*sell*（从卖方的视角）、*pay*（关注金钱方面），或名词如 *buyer*（买方）。框架具有语义角色（如 *buyer* 买方、*seller* 卖方、*goods* 商品、*money* 金钱），句子中的词语可以承担这些角色。
 
-Knowing that *buy* and *sell* have this relation makes it possible for a system to
-know that a sentence like *Sam bought the book from Ling* could be paraphrased as
-*Ling sold the book to Sam*, and that Sam has the role of the *buyer* in the frame and
-Ling the *seller*. Being able to recognize such paraphrases is important for question
-answering, and can help in shifting perspective for machine translation.
+了解 *buy* 和 *sell* 具有这种关系，使得系统能够知道像 *Sam bought the book from Ling*（萨姆从玲那里买了这本书）这样的句子可以被改写为 *Ling sold the book to Sam*（玲把这本书卖给了萨姆），并且萨姆在该框架中扮演 *buyer*（买方）的角色，而玲是 *seller*（卖方）。能够识别此类改写对于问答任务非常重要，并且有助于在机器翻译中转换视角。
 
-**Connotation** Finally, words have affective meanings or **connotations**. The word
-*connotation* has different meanings in different ﬁelds, but here we use it to mean the
-aspects of a word’s meaning that are related to a writer or reader’s emotions, senti-
-ment, opinions, or evaluations. For example some words have positive connotations
-(*wonderful*) while others have negative connotations (*dreary*). Even words whose
-meanings are similar in other ways can vary in connotation; consider the difference
-in connotations between *fake*, *knockoff*, *forgery*, on the one hand, and *copy*, *replica*,
-*reproduction* on the other, or *innocent* (positive connotation) and *naive* (negative
-connotation). Some words describe positive evaluation (great, love) and others neg-
-ative evaluation (*terrible*, *hate*). Positive or negative evaluation language is called
-**sentiment**, as we saw in Chapter 4, and word sentiment plays a role in importantsentiment
-tasks like sentiment analysis, stance detection, and applications of NLP to the lan-
-guage of politics and consumer reviews.
+**内涵** 最后，词语具有情感意义或**内涵**（connotations）。*connotation*（内涵）一词在不同领域中有不同的含义，但在这里我们用它来指词语意义中与作者或读者的情感、情绪、观点或评价相关的方面。例如，一些词具有正面内涵（*wonderful* 精彩的），而另一些则具有负面内涵（*dreary* 沉闷的）。即使在其他方面意义相似的词语，其内涵也可能不同；例如，*fake*（假货）、*knockoff*（仿制品）、*forgery*（伪造品）与 *copy*（复制件）、*replica*（复制品）、*reproduction*（再制品）在内涵上的差异，或 *innocent*（天真的，正面内涵）与 *naive*（幼稚的，负面内涵）之间的区别。有些词表达正面评价（great 极好的，love 热爱），而另一些则表达负面评价（*terrible* 糟糕的，*hate* 憎恨）。这种表达正面或负面评价的语言被称为**情感**（sentiment），正如我们在第4章中所见，词语情感在情感分析、立场检测以及NLP在政治语言和消费者评论中的应用等重要任务中扮演着关键角色。
 
-Early work on affective meaning (Osgood et al., 1957) found that words varied
-along three important dimensions of affective meaning:
+关于情感意义的早期研究（Osgood 等，1957）发现，词语在情感意义的三个重要维度上有所不同：
 
-> **valence**: the pleasantness of the stimulus
-> **arousal**: the intensity of emotion provoked by the stimulus
-> **dominance**: the degree of control exerted by the stimulus
+> **效价（valence）**：刺激物的愉悦程度  
+> **唤醒度（arousal）**：刺激物引发的情绪强度  
+> **支配度（dominance）**：刺激物施加的控制程度
 
-Thus words like *happy* or *satisﬁed* are high on valence, while *unhappy* or
-*annoyed* are low on valence. *Excited* is high on arousal, while *calm* is low on arousal.
-*Controlling* is high on dominance, while *awed* or *inﬂuenced* are low on dominance.
-Each word is thus represented by three numbers, corresponding to its value on each
-of the three dimensions:
+因此，像 *happy*（快乐）或 *satisfied*（满足）这样的词在效价上得分很高，而 *unhappy*（不快乐）或 *annoyed*（恼怒）则在效价上得分较低。*Excited*（兴奋）在唤醒度上得分高，而 *calm*（平静）在唤醒度上得分低。*Controlling*（有控制力的）在支配度上得分高，而 *awed*（敬畏的）或 *influenced*（受影响的）则在支配度上得分低。每个词因此由三个数字表示，对应其在这三个维度上的评分：
 
-| | Valence | Arousal | Dominance |
-| courageous | 8.05 | 5.5 | 7.38 |
-| music | 7.67 | 5.57 | 6.5 |
-| heartbreak | 2.45 | 5.65 | 3.58 |
-| cub | 6.71 | 3.95 | 4.24 |
+| 词语 | 效价 (Valence) | 唤醒度 (Arousal) | 支配度 (Dominance) |
+| :--- | :--- | :--- | :--- |
+| courageous（勇敢的） | 8.05 | 5.5 | 7.38 |
+| music（音乐） | 7.67 | 5.57 | 6.5 |
+| heartbreak（心碎） | 2.45 | 5.65 | 3.58 |
+| cub（幼崽） | 6.71 | 3.95 | 4.24 |
 
-Osgood et al. (1957) noticed that in using these 3 numbers to represent the
-meaning of a word, the model was representing each word as a point in a three-
-dimensional space, a vector whose three dimensions corresponded to the word’s
-rating on the three scales. This revolutionary idea that word meaning could be rep-
-resented as a point in space (e.g., that part of the meaning of *heartbreak* can be
-represented as the point [2.45,5.65,3.58]) was the ﬁrst expression of the vector se-
-mantics models that we introduce next.
+Osgood 等人（1957）注意到，当使用这三个数字来表示词义时，该模型实际上是将每个词表示为三维空间中的一个点，其三维向量分别对应于该词在这三个尺度上的评分。这种“词义可以表示为空间中的一个点”的革命性思想（例如，*heartbreak*（心碎）的部分意义可以表示为点 [2.45, 5.65, 3.58]）正是我们接下来要介绍的向量语义模型的最初表达。
 
 
 <nav class="pagination justify-content-between">
-<a href="../ch6">CHAPTER 6 Vector Semantics and Embeddings</a>
+<a href="../ch6">第6章 向量语义与词嵌入</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../ch6-02">6.2 向量语义</a>
 </nav>
 
