--- a/content/speech-and-language-processing/ch6-02.md
+++ b/content/speech-and-language-processing/ch6-02.md
@@ -40,6 +40,6 @@ date: 2025-10-12T08:53:00+08:00
 <nav class="pagination justify-content-between">
 <a href="../ch6-01">6.1 词汇语义</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../ch6-03">6.3 词语与向量</a>
 </nav>
 
