--- a/content/speech-and-language-processing/ch6-04.md
+++ b/content/speech-and-language-processing/ch6-04.md
@@ -23,9 +23,8 @@ $$
 
 $$
 |\mathbf{v}| = \sqrt{\sum_{i=1}^N v_i^2}
+\tag{6.8}
 $$
-
-(6.8)
 
 如果一个向量更长，每个维度的值更高，其点积也会更高。更频繁出现的词具有更长的向量，因为它们倾向于与更多的词共现，并且与每个共现词的共现值也更高。因此，原始点积对高频词的值会更高。但这是一个问题；我们希望相似性度量能告诉我们两个词有多相似，而不受它们频率的影响。
 
@@ -33,8 +32,8 @@ $$
 
 $$
 \begin{aligned}
-\mathbf{a} \cdot \mathbf{b} = |\mathbf{a}||\mathbf{b}| \cos\theta \\
-\frac{\mathbf{a} \cdot \mathbf{b}}{|\mathbf{a}||\mathbf{b}|} = \cos\theta
+\mathbf{a} \cdot \mathbf{b} &= |\mathbf{a}||\mathbf{b}| \cos\theta \\
+\frac{\mathbf{a} \cdot \mathbf{b}}{|\mathbf{a}||\mathbf{b}|} &= \cos\theta
 \end{aligned}
 \tag{6.9}
 $$
@@ -79,6 +78,6 @@ $$
 <nav class="pagination justify-content-between">
 <a href="../ch6-03">6.3 词语与向量</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../ch6-05">6.5 TF-IDF：向量中词语的加权</a>
 </nav>
 
