--- a/content/decode-the-world/2025-11-01.md
+++ b/content/decode-the-world/2025-11-01.md
@@ -127,4 +127,4 @@ date: 2025-11-01
 1. 尊重演化的力量：承认人类理性的有限性，不要轻易相信可以凭借一套理论“砸烂旧世界，创造新世界”。现存的制度、传统和习俗中，可能包含着经过漫长历史试错筛选出来的、我们一时无法理解的智慧。
 2. 创造演化的条件：人类最伟大的政治成就，或许不是设计了某个完美的终极制度，而是构建了那些能够允许并保护持续试错、学习和演化的元制度——例如法治、民主制和市场经济。它们本身就是一个能不断自我修正的“演化系统”。
 
-所以，历史或许没有“必然”的终点，但通过创造合适的条件，我们可以提高文明向更繁荣、更自由、更公正方向演化的概率。这不再是建造乌托邦的梦想，而是扮演一个好园角色的务实责任。这正是在承认偶然性与复杂性的前提下，人类依然可以保有的一种谨慎的乐观。
+所以，历史或许没有“必然”的终点，但通过创造合适的条件，我们可以提高文明向更繁荣、更自由、更公正方向演化的概率。这不再是建造乌托邦的梦想，而是扮演一个好园丁角色的务实责任。这正是在承认偶然性与复杂性的前提下，人类依然可以保有的一种谨慎的乐观。
