--- a/content/speech-and-language-processing/ch5-06.md
+++ b/content/speech-and-language-processing/ch5-06.md
@@ -4,26 +4,34 @@ summary: ""
 date: 2025-10-07T08:56:00+08:00
 ---
 
-使用梯度下降的目标是找到最优的权重：即最小化为模型定义的损失函数。在下面的公式 (5.25) 中，我们将明确表示交叉熵损失函数 $L_{CE}$ 是由权重参数化的。在机器学习中，我们通常将待学习的参数统称为 $\theta$；在逻辑回归中，$\theta = \{\mathbf{w}, b\}$。因此，目标是找到一组权重，使得损失函数在所有训练样本上的平均值最小：
+使用梯度下降的目标是找到最优的权重：即最小化为模型定义的损失函数。
+在下面的公式 (5.25) 中，我们将明确表示交叉熵损失函数 $L_{CE}$ 是由权重参数化的。
+在机器学习中，我们通常将待学习的参数统称为 $\theta$；在逻辑回归中，$\theta = \{\mathbf{w}, b\}$。
+因此，目标是找到一组权重，使得损失函数在所有训练样本上的平均值最小：
 
 $$
 \hat{\theta} = \underset{\theta}{\mathrm{argmin}} \frac{1}{m} \sum_{i=1}^m L_{CE}( f(x^{(i)};\theta), y^{(i)})
 \tag{5.25}
 $$
 
-该如何找到这个（或任何）损失函数的最小值呢？梯度下降是一种通过确定函数在参数空间 $\theta$ 中哪个方向上升最陡峭，然后朝相反方向移动，从而找到函数最小值的方法。其直观理解是：如果你在峡谷中徒步，想要最快地走到谷底的河流处，可能会环顾四周，找到地面坡度最陡的方向，然后朝着那个方向下坡行走。
+该如何找到这个（或任何）损失函数的最小值呢？
+梯度下降是一种找到函数最小值的方法：找出函数在参数空间 $\theta$ 中哪个方向上升最陡峭，然后朝相反方向移动。
+其直观理解是：如果你在峡谷中徒步，想要最快地走到谷底的河流处，可能会环顾四周，找到地面坡度最陡的方向，然后朝着那个方向下坡行走。
 
-对于逻辑回归而言，这个损失函数恰好是**凸函数**（convex）。凸函数最多只有一个最小值，不存在会陷入的局部最小值，因此无论从哪个点开始，梯度下降都能保证找到全局最小值。（相比之下，多层神经网络的损失函数是非凸的，梯度下降在训练神经网络时可能会陷入局部最小值，而永远无法找到全局最优解。）
+对于逻辑回归而言，这个损失函数恰好是**凸函数**（convex）。
+凸函数最多只有一个最小值，不存在会陷入的局部最小值，因此无论从哪个点开始，梯度下降都能保证找到全局最小值。
+（相比之下，多层神经网络的损失函数是非凸的，梯度下降在训练神经网络时可能会陷入局部最小值，而永远无法找到全局最优解。）
 
-尽管该算法（以及梯度的概念）是为向量方向设计的，我们先考虑一个更简单的可视化场景：假设我们系统的参数只是一个标量 $w$，如图5.4所示。
+该算法（以及梯度的概念）是为方向向量设计的，不过我们先考虑一个更简单的可视化场景：假设系统的参数只是一个标量 $w$，如图5.4所示。
 
-假设随机初始化 $\mathbf{w}$ 为某个值 $w_1$，并假设损失函数 $L$ 恰好具有图5.4所示的形状。此时，我们需要算法告诉我们，在下一次迭代中，是应该向左移动（使 $w_2$ 小于 $w_1$）还是向右移动（使 $w_2$ 大于 $w_1$），才能到达最小值。
+假设随机初始化 $\mathbf{w}$ 为某个值 $w_1$，并假设损失函数 $L$ 恰好具有图 5.4 所示的形状。
+此时，我们需要算法告诉我们，在下一次迭代中，是应该向左移动（使 $w_2$ 小于 $w_1$）还是向右移动（使 $w_2$ 大于 $w_1$），才能到达最小值。
 
 ![](/images/speech-and-language-processing/slp-fig-5-4.png)
 
-**图 5.4** 通过沿函数斜率的反方向移动 $\mathbf{w}$，迭代地找到该损失函数最小值的第一步。由于斜率为负，需要将 $\mathbf{w}$ 向正方向（右侧）移动。此处上标用于表示学习步骤，因此 $w_1$ 表示 $\mathbf{w}$ 的初始值（即0），$w_2$ 表示第二步的值，依此类推。
+**图 5.4** 通过迭代找到该损失函数最小值，第一步是沿函数斜率的反方向移动 $\mathbf{w}$。由于斜率为负，需要将 $\mathbf{w}$ 向正方向（右侧）移动。此处上标用于表示学习步骤，因此 $w^1$ 表示 $\mathbf{w}$ 的初始值（即0），$w^2$ 表示第二步的值，依此类推。
 
-梯度下降算法通过计算当前点处损失函数的**梯度**（gradient），并朝其相反方向移动来解决这个问题。一个多变量函数的梯度是一个向量，指向函数值增长最快的方向。梯度是斜率在多变量情况下的推广，因此对于像图5.4中这样的单变量函数，我们可以非正式地将梯度视为斜率。图5.4中的虚线显示了在点 $\mathbf{w} = w_1$ 处这个假设损失函数的斜率。可以看到，这条虚线的斜率为负。因此，为了找到最小值，梯度下降告诉我们应朝相反方向移动：即把 $\mathbf{w}$ 向正方向移动。
+梯度下降算法计算当前点处损失函数的**梯度**（gradient），并朝其相反方向移动，以此来解决这个问题。一个多变量函数的梯度是一个向量，指向函数值增长最快的方向。梯度是斜率在多变量情况下的推广，因此对于像图5.4中这样的单变量函数，我们可以非正式地将梯度视为斜率。图5.4中的虚线显示了在点 $\mathbf{w} = w^1$ 处这个假设损失函数的斜率。可以看到，这条虚线的斜率为负。因此，为了找到最小值，梯度下降告诉我们应朝相反方向移动：即把 $\mathbf{w}$ 向正方向移动。
 
 在梯度下降中，移动的幅度大小由斜率 $\frac{d}{dw} L(f(x;w),y)$ 的值乘以一个**学习率**（learning rate）$\eta$ 决定。较高的（更快的）学习率意味着我们在每一步中对 $\mathbf{w}$ 的调整更大。对参数的调整量等于学习率乘以梯度（在我们的单变量例子中即斜率）：
 
