--- a/content/speech-and-language-processing/ch6-08.md
+++ b/content/speech-and-language-processing/ch6-08.md
@@ -4,17 +4,35 @@ summary: ""
 date: 2025-10-16T07:50:00+08:00
 ---
 
-在前面的章节中，我们了解了如何将一个词表示为稀疏的长向量，其维度对应于词汇表中的词或文档集合中的文档。现在，我们介绍一种更强大的词表示方法：**嵌入（embeddings）**，即短而稠密的向量。与迄今为止所见的向量不同，嵌入向量是**短的**，其维度 $d$ 通常在50到1000之间，远小于之前遇到的庞大词汇量 $|V|$ 或文档数量 $D$。这些维度 $d$ 并没有明确的解释意义。并且这些向量是**稠密的**：向量元素不再是稀疏的、大部分为零的计数或计数函数，而是可以为负的实数值。
+在前面的章节中，我们了解了如何将一个词表示为稀疏的长向量，其维度对应于词汇表中的词或文档集合中的文档。
+现在，我们介绍一种更强大的词表示方法：**嵌入（embeddings）**，即短而稠密的向量。
+与迄今为止所见的向量不同，嵌入向量是**短的**，其维度 $d$ 通常在50到1000之间，远小于之前遇到的庞大词汇量 $|V|$ 或文档数量 $D$。
+这些维度 $d$ 并没有明确的解释意义。
+并且这些向量是**稠密的**：向量元素不再是稀疏的、大部分为零的计数或计数函数，而是可以为负的实数值。
 
-事实证明，在每一项自然语言处理任务中，稠密向量的表现都优于稀疏向量。虽然我们尚未完全理解所有原因，但有一些合理的解释。将词表示为300维的稠密向量，比起表示为50,000维的向量，能让分类器学习的权重少得多，更小的参数空间可能有助于提升泛化能力并避免过拟合。稠密向量也可能更有效地捕捉同义关系。例如，在稀疏向量表示中，像 *car* 和 *automobile* 这样的同义词对应的维度是彼此独立且无关的；因此，稀疏向量可能无法捕捉到一个以 *car* 为邻近词的词与另一个以 *automobile* 为邻近词的词之间的相似性。
+事实证明，在每一项自然语言处理任务中，稠密向量的表现都优于稀疏向量。
+虽然我们尚未完全理解所有原因，但有一些合理的解释。
+将词表示为300维的稠密向量，比起表示为50,000维的向量，能让分类器学习的权重少得多，更小的参数空间可能有助于提升泛化能力并避免过拟合。
+稠密向量也可能更有效地捕捉同义关系。
+例如，在稀疏向量表示中，像 *car* 和 *automobile* 这样的同义词对应的维度是彼此独立且无关的；因此，稀疏向量可能无法捕捉到一个以 *car* 为邻近词的词与另一个以 *automobile* 为邻近词的词之间的相似性。
 
-本节中介绍一种计算嵌入的方法：**负采样跳字模型（skip-gram with negative sampling）**，有时简称为 **SGNS**。跳字算法是名为 **word2vec** 的软件包中的两种算法之一，因此该算法有时被笼统地称为 word2vec（Mikolov 等，2013a；Mikolov 等，2013b）。word2vec 方法速度快、训练高效，且代码和预训练嵌入模型在线上易于获取。Word2vec 嵌入是静态的**嵌入**，意味着该方法为词汇表中的每个词学习一个固定的嵌入表示。在第11章中，我们将介绍学习动态上下文**嵌入**的方法，如流行的 **BERT** 表示系列，其中每个词的向量会因其所处的不同上下文而变化。
+本节中介绍一种计算嵌入的方法：**负采样跳字模型（skip-gram with negative sampling）**，有时简称为 **SGNS**。
+跳字算法是名为 **word2vec** 的软件包中的两种算法之一，因此该算法有时被笼统地称为 word2vec（Mikolov 等，2013a；Mikolov 等，2013b）。
+word2vec 方法速度快、训练高效，且代码和预训练嵌入模型在线上易于获取。
+Word2vec 嵌入是静态的**嵌入**，意味着该方法为词汇表中的每个词学习一个固定的嵌入表示。
+在第11章中，我们将介绍学习动态上下文**嵌入**的方法，如流行的 **BERT** 表示系列，其中每个词的向量会因其所处的不同上下文而变化。
 
-word2vec 的核心理念是：不再统计每个词 $w$ 在某个词（比如 *apricot*）附近出现的频率，而是训练一个分类器来执行一个二元预测任务：“词 $w$ 是否可能出现在 *apricot* 附近？” 我们实际上并不关心这个预测任务本身；而是将分类器学习到的**权重**作为词的嵌入表示。
+word2vec 的核心理念是：不再统计每个词 $w$ 在某个词（比如 *apricot*）附近出现的频率，而是训练一个分类器来执行一个二元预测任务：“词 $w$ 是否可能出现在 *apricot* 附近？”
+我们实际上并不关心这个预测任务本身；而是将分类器学习到的**权重**作为词的嵌入表示。
 
-这里的**革命性思想**在于，我们可以直接使用连续文本作为此类分类器的隐式监督训练数据：一个在目标词 *apricot* 附近出现的词 $c$，就充当了“词 $c$ 是否可能出现在 *apricot* 附近？”这一问题的黄金标准“正确答案”。这种方法通常被称为**自监督**，它避免了任何人工标注监督信号的需求。这一思想最初在神经语言建模任务中被提出，Bengio 等人（2003）和 Collobert 等人（2011）表明，一个神经语言模型（一种学习根据前文预测下一个词的神经网络）可以直接使用连续文本中的下一个词作为其监督信号，并可在执行此预测任务的同时学习每个词的嵌入表示。
+这里的**革命性思想**在于，我们可以直接使用连续文本作为此类分类器的隐式监督训练数据：一个在目标词 *apricot* 附近出现的词 $c$，就充当了“词 $c$ 是否可能出现在 *apricot* 附近？”这一问题的黄金标准“正确答案”。
+这种方法通常被称为**自监督**，它避免了任何人工标注监督信号的需求。
+这一思想最初在神经语言建模任务中被提出，Bengio 等人（2003）和 Collobert 等人（2011）表明，一个神经语言模型（一种学习根据前文预测下一个词的神经网络）可以直接使用连续文本中的下一个词作为其监督信号，并可在执行此预测任务的同时学习每个词的嵌入表示。
 
-我们将在下一章介绍神经网络的实现方法，但 word2vec 是一个比神经网络语言模型简单得多的模型，主要体现在两方面。首先，word2vec 简化了任务（将其变为二元分类而非词预测）。其次，word2vec 简化了架构（训练一个逻辑回归分类器，而不是一个多层、包含隐藏层且需要更复杂训练算法的神经网络）。跳字模型的**设计原理**如下：
+我们将在下一章介绍神经网络的实现方法，但 word2vec 是一个比神经网络语言模型简单得多的模型，主要体现在两方面。
+首先，word2vec 简化了任务（将其变为二元分类而非词预测）。
+其次，word2vec 简化了架构（训练一个逻辑回归分类器，而不是一个多层、包含隐藏层且需要更复杂训练算法的神经网络）。
+跳字模型的**设计原理**如下：
 
 1. 将目标词与其邻近的上下文词视为正例。
 2. 从词典中随机采样其他词以获得负例。
@@ -23,7 +41,8 @@ word2vec 的核心理念是：不再统计每个词 $w$ 在某个词（比如 *a
 
 ### 6.8.1 分类器
 
-我们先思考分类任务本身，然后再讨论如何训练。假设有一个如下句子，目标词为 *apricot*，并假设使用 ±2 的上下文窗口：
+我们先思考分类任务本身，然后再讨论如何训练。
+假设有一个如下句子，目标词为 *apricot*，并假设使用 ±2 的上下文窗口：
 
 ```text
 ... lemon, a [tablespoon of apricot jam,     a] pinch ...
@@ -44,14 +63,16 @@ P(−|w,c) = 1 − P(+|w,c)
 \tag{6.25}
 $$
 
-分类器如何计算概率 $P$？跳字模型的**基本思想**是，将此概率建立在嵌入相似性之上：如果一个词的嵌入向量与目标词的嵌入向量相似，那么它就更有可能出现在目标词附近。为了计算这些稠密嵌入之间的相似性，我们依赖于这样一个原则：如果两个向量的**点积**很高，则它们是相似的（毕竟，余弦相似度只是归一化的点积）。换句话说：
+分类器如何计算概率 $P$？跳字模型的**基本思想**是，将此概率建立在嵌入相似性之上：如果一个词的嵌入向量与目标词的嵌入向量相似，那么它就更有可能出现在目标词附近。
+为了计算这些稠密嵌入之间的相似性，我们依赖于这样一个原则：如果两个向量的**点积**很高，则它们是相似的（毕竟，余弦相似度只是归一化的点积）。换句话说：
 
 $$
 Similarity(w,c) \approx \mathbf{c} \cdot \mathbf{w}
 \tag{6.26}
 $$
 
-点积 $\mathbf{c} \cdot \mathbf{w}$ 本身不是一个概率，它只是一个取值范围从 $-\infty$ 到 $\infty$ 的数值（由于 word2vec 嵌入向量中的元素可以为负，因此点积结果也可能为负）。为了将点积转化为概率，我们将使用**逻辑回归（logistic）**或**Sigmoid**函数 $\sigma(x)$，这是逻辑回归的核心组成部分：
+点积 $\mathbf{c} \cdot \mathbf{w}$ 本身不是一个概率，它只是一个取值范围从 $-\infty$ 到 $\infty$ 的数值（由于 word2vec 嵌入向量中的元素可以为负，因此点积结果也可能为负）。
+为了将点积转化为概率，我们将使用**逻辑回归（logistic）**或**Sigmoid**函数 $\sigma(x)$，这是逻辑回归的核心组成部分：
 
 $$
 \sigma(x) = \frac{1}{1 + exp(−x)}
@@ -234,6 +255,6 @@ $$
 <nav class="pagination justify-content-between">
 <a href="../ch6-07">6.7 tf-idf 或 PPMI 向量模型的应用</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../ch6-09">6.9 嵌入向量的可视化</a>
 </nav>
 
