--- a/content/decode-the-world/2025-11-05.md
+++ b/content/decode-the-world/2025-11-05.md
@@ -31,13 +31,13 @@ date: '2025-11-05T22:55:00+08:00'
 
 它已融入人群，只靠那根管子牵着我，像风筝的线，却由风筝掌控方向。我的手臂麻木，意识开始模糊，耳边响起低频嗡鸣——那是城市中心输液塔的声音，据说所有伞最终都会回到那里，完成“终极融合”。
 
-我拼命回想生病前的世界：有没有风？有没有雨？有没有不需要输液就能走路的日子？
+我拼命回想生病前的世界：有没有风？有没有那种能晒透骨头的阳光？有没有不需要计算卡路里、纯粹为了美味而咬下的第一口面包？
 
 记忆像被水泡过的纸，字迹全糊了。
 
 突然，伞猛地一拽，我跌进一条小巷。  
 
-巷子尽头，一个老人蜷缩在墙角，怀里抱着一把**没有输液管的伞**——普通的、能遮雨的伞。他看见我，眼神清明得刺眼。
+巷子尽头，一个老人蜷缩在墙角，怀里抱着一把**没有输液管的伞**——普通的、能遮雨的伞。他枯瘦的手指正反复摩挲着伞面上磨损的孔雀蓝花纹，仿佛在触摸一个古老的誓言。 他看见我，眼神清明得刺眼。
 
 “拔掉它，”他嘶哑地说，“趁它还没长进你的心脏。”
 
@@ -53,7 +53,7 @@ date: '2025-11-05T22:55:00+08:00'
 
 我咬牙，一把抓住管子。  
 
-剧痛炸开的瞬间，世界扭曲了。 
+剧痛炸开的瞬间，世界扭曲了。
 
 街上的欢笑声骤然放大，变成尖锐的蜂鸣；人群的笑脸拉长、撕裂，露出底下空洞的颅骨轮廓。我踉跄后退，输液伞在我手中剧烈震颤，那张多边形的脸猛地转向我，LED眼睛闪烁红光——它在**愤怒**。  
 
@@ -111,7 +111,7 @@ date: '2025-11-05T22:55:00+08:00'
 
 我愣住：“你不劝我？”  
 
-他望向远处的输液塔，塔顶闪烁着柔和的蓝光，像一颗巨大的心脏在呼吸。“劝过太多人了。有人回去，有人疯了，有人死了。但从来没人真正自由。”他顿了顿，“自由不是状态，是持续的疼痛。你得问自己：你受得了吗？”  
+他望向远处的输液塔，塔顶闪烁着柔和的蓝光，像一颗巨大的心脏在呼吸。“劝过太多人了。有人回去，有人疯了，有人死了。但从来没人真正自由。”他顿了顿，用那根摩挲过伞面花纹的手指，点了点自己的心口，“自由不是状态，是持续的疼痛。你得问自己：你受得了吗？”  
 
 那天傍晚，我站在天台边缘。  
 
